--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "reg-form": {
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "reg-form"
+    }
+  },
+  "defaultProject": "reg-form",
+  "cli": {
+    "analytics": "73e6db3c-5dad-4dd3-ad6c-a9bcf9f1ee0f"
+  }
 }
